2024-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.4.

2024-06-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): Adapt docstring.
	Use connection-local value.

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Dump os-release when `tramp-verbose' is at least 9.

2024-06-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): New defcustom and defsubst.
	(tramp-skeleton-file-exists-p):
	* tramp-adb.el (tramp-adb-handle-file-executable-p)
	(tramp-adb-handle-file-readable-p):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-executable-p)
	(tramp-sudoedit-handle-file-readable-p)
	(tramp-sudoedit-handle-file-writable-p): Use it.
	* tramp-sh.el (tramp-sh-handle-file-executable-p)
	(tramp-sh-handle-file-readable-p)
	(tramp-sh-handle-file-writable-p): Use it.
	(tramp-sh-handle-set-file-acl): Fix property name.

2024-06-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-auth-info-password): Use original
	function only for Emacs 30+.

2024-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-unique-process-name): New defun.
	(tramp-skeleton-make-process): Use it.
	(tramp-skeleton-process-file): New defmacro.

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file):
	* tramp-sshfs.el (tramp-sshfs-handle-process-file):
	Use `tramp-skeleton-process-file'.

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Don't compute
	process name, this is done in `tramp-skeleton-make-process'.

2024-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-local-name): Adapt docstring.
	(tramp-skeleton-make-process): New defmacro.

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):